--- a/email.html
+++ b/email.html
@@ -106,7 +106,7 @@
     </header>
 
     <nav>
-        <a href="file:///C:/Users/Ansh%20Verma/OneDrive/Desktop/av.html">Home</a>
+        <a href="https://vloggerverma.github.io/vlogger-verma/">Home</a>
         
     </nav>
 
