--- a/noti.html
+++ b/noti.html
@@ -52,17 +52,22 @@
     }
   </style>
 </head>
+  <nav>
+        <a href="https://vloggerverma.github.io/vlogger-verma/">Home</a>
+        
+    </nav>
+
 <body>
   <h1>Notifications</h1>
   <div class="notification-container">
     <div class="notification success">
-      ✅ New videos soon.
+      ✅ New vlogs soon.
     </div>
     <div class="notification info">
-      ℹ️ A very intresting video will come soon make sure to Check it out!
+      ℹ️ A very intresting video wil come soon make sure to Check it out!
     </div>
     <div class="notification warning">
-      🙏 Make sure to subscribe! 2k soon 
+      🙏 Make sure to subscribe! 500 subs soon. 
     </div>
 
   </div>
