--- a/noti.html
+++ b/noti.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notification Page</title>
   <style>
+       nav a:hover {
+            background-color: #ff0000;
+            transition: background-color 0.3s ease;
+        }
     body {
       font-family: Arial, sans-serif;
       background-color: yellow; /* Set the background color to yellow */
