--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <a href="#videos">Videos</a>
         <a href="#about">About</a>
         <a href="#contact">Contact</a>
-        <a href="noti.html">Notificatios</a>
+        <a href="noti.html">Notifications</a>
     </nav>
 
     <section class="hero">
