--- a/index.html
+++ b/index.html
@@ -207,6 +207,7 @@ Subscribe for weekly vlogs, relatable stories, and a fresh perspective on life's
             <h2>Connect with Me-</h2>
             <a href="https://www.youtube.com/@vloggerverma-001" target="_blank">YouTube</a>
             <a href="https://www.instagram.com/verma.ansh_01" target="_blank">Instagram</a>
+             <a href="https://tubespace.io/vloggerverma" target="_blank">Second Website </a>
             <a href="email.html">Email</a>
       
 
