--- a/noti.html
+++ b/noti.html
@@ -9,6 +9,14 @@
             background-color: #ff0000;
             transition: background-color 0.3s ease;
         }
+      nav a {
+            color: black;
+            padding: 14px 20px;
+            text-decoration: none;
+            font-weight: bold;
+            font-size: 1.1rem;
+            text-transform: uppercase;
+        }
     body {
       font-family: Arial, sans-serif;
       background-color: yellow; /* Set the background color to yellow */
