--- a/noti.html
+++ b/noti.html
@@ -5,17 +5,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Notification Page</title>
   <style>
-       nav a:hover {
-            background-color: #ff0000;
-            transition: background-color 0.3s ease;
+       nav {
+            display: flex;
+            justify-content: center;
+            background-color: yellow;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
         }
-      nav a {
+
+        nav a {
             color: black;
             padding: 14px 20px;
             text-decoration: none;
             font-weight: bold;
             font-size: 1.1rem;
             text-transform: uppercase;
+        }
+
+        nav a:hover {
+            background-color: #ff0000;
+            transition: background-color 0.3s ease;
+        }
         }
     body {
       font-family: Arial, sans-serif;
