--- a/noti.html
+++ b/noti.html
@@ -28,7 +28,7 @@
         }
     body {
       font-family: Arial, sans-serif;
-      background-color: yellow; /* Set the background color to yellow */
+      background-color: red; /* Set the background color to yellow */
       margin: 0;
       padding: 20px;
     }
